--- a/style.css
+++ b/style.css
@@ -11,36 +11,37 @@ body {
 }
 
 .clock {
-    font-size: 20px;
+    margin-top: 10px;
+    font-size: 40px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    display: inline-block;
-    margin-left: 90px;
-    -webkit-transform: scale(2, 1);
-    -moz-transform: scale(2, 1);
-    -o-transform: scale(2, 1);
-    transform: scale(2, 2);
+    display: flex;
+    justify-content: center;
+    align-content: center;
 }
 
 .startbtn {
+    margin-top: 50px;
     border: 0px;
     background-color: transparent;
     padding: 0px;
-    margin-left: 55px;
 }
 
-.game {
-    border: 5px solid #352F44;
-    margin: auto;
-    width: 50%;
-    padding: 10px;
-}
-
-.time {
+.memorygame{
     position: absolute;
+    top: 10%;
     left: 50%;
     transform: translate(-50%);
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    border-radius: 5px;
     border: 5px solid #352F44;
-    padding: 5px;
-    margin: auto;
-    width: 50%;
+    padding: 10px;
+}
+.timer{
+    margin-left: 10px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
 }
