--- a/style.css
+++ b/style.css
@@ -20,10 +20,19 @@ body {
 }
 
 .startbtn {
-    margin-top: 50px;
-    border: 0px;
-    background-color: transparent;
-    padding: 0px;
+    height: 48px;
+    width: 110px;
+    background-color: #FAF0E6;
+    border: 3px solid #352F44;
+    display: inline-block;
+    color: #352F44;
+    font-size: 35px;
+    font-family: 'Franklin Gothic Heavy', 'Arial Narrow', Arial, sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+    cursor: pointer;
 }
 
 .memorygame{
