--- a/style.css
+++ b/style.css
@@ -43,9 +43,15 @@ body {
     display: flex;
     justify-content: center;
     align-content: center;
+    flex-direction: column;
     border-radius: 5px;
     border: 5px solid #352F44;
     padding: 10px;
+}
+.uppergame{
+    display: flex;
+    justify-content: center;
+    align-content: center;
 }
 .timer{
     margin-left: 10px;
